Document events endpoints (#20)
* Return only the created events on the creation endpoint

* Document the new endpoints
